deployment-wlimits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-quarkus-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-quarkus
  template:
    metadata:
      labels:
        app: demo-quarkus
        env: dev
    spec:
      containers:
      - name: demo-quarkus
        image: eldermoraes/demo-quarkus:1.0-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m" # 1/4 cores
          limits:
            memory: "200Mi"
            cpu: "500m" #1/2 cores
