naked-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-quarkus
spec:
  containers:
  - name: demo-quarkus
    image: eldermoraes/demo-quarkus:1.0-SNAPSHOT
