service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-quarkus-svc
spec:
  selector:
    app: demo-quarkus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007
  type: NodePort
