ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-quarkus-ingress
  namespace: brunonasc01-1-dev
spec:
  rules:
    - host: demo-quarkus.apps.sandbox-m2.ll9k.p1.openshiftapps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-quarkus-svc
                port:
                  number: 80
